--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./pic.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="./ZXDQkv9-5850881336.jpg alt="Your Profile Picture" class="profile-picture">
             <h1>A. Tamilselvi </h1>
             <p>BCA </p>
             <p>Computer Applications</p>
