--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>MSc., MPhil.,NET</p>
+            <p>BCA</p>
             
             
         </div>
