--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <img src="./ZXDQkv9-5850881336.jpg alt="Your Profile Picture" class="profile-picture">
             <h1>A. Tamilselvi </h1>
             <p>BCA </p>
-            <p>Computer Applications</p>
+            <p>Computer Application</p>
         </div>
     </header>
 
